--- a/src/components/contestants/contestants.scss
+++ b/src/components/contestants/contestants.scss
@@ -12,9 +12,9 @@
   .contestants-wrapper{
     height: auto;
     justify-content: center;
-    margin-top: 0px;
+    margin: 50px 0px;
     position: relative;
-    top: 200px;
+    top: auto;
 
     .contestants{
       height: auto;
@@ -35,16 +35,11 @@
   overflow: auto;
   padding: 30px 0px;
   position: absolute;
-  right: -600px;
+  right: 0px;
   transform: rotateX(-25deg) rotateY(-35deg) rotateZ(-5deg);
   transform-style: preserve-3d;
-  transition: all 1s;
   width: 600px;
   z-index: 5;
-
-  &.intro{
-    right: 0px;
-  }
 
   .contestant{
     align-items: center;
@@ -79,11 +74,12 @@
       .name{
         margin-left: 60px;
         text-align: center;
-        text-shadow: $medium-silver 1px 1px, $medium-silver 2px 2px;
         width: 180px;
 
         h1{
           color: white;
+          font-weight: 300;
+          text-shadow: 0px 0px 1px rgba(black, 0.4);
         }
       }
 
@@ -110,9 +106,7 @@
     }
 
     .medal{
-      background-color: white;
       border-radius: 30px;
-      box-shadow: 1px 1px 4px rgba(0,0,0,0.4);
       height: 60px;
       width: 60px;
       z-index: 2;
@@ -123,15 +117,17 @@
 
       .place{
         align-items: center;
-        border-radius: 30px;
+        background-color: white;
+        border-top-left-radius: 30px;
+        border-top-right-radius: 30px;
         color: $light-blue;
         display: flex;
-        font-weight: bolder;
+        font-weight: 300;
         height: 30px;
+        line-height: 30px;
         justify-content: center;
         margin: 0px;
         text-align: center;
-        text-shadow: $light-blue 1px 1px, $dark-blue 2px 2px;
         width: 60px;
       }
 
@@ -142,10 +138,10 @@
         border-bottom-right-radius: 30px;
         color: white;
         display: flex;
+        font-weight: 300;
         height: 30px;
         justify-content: center;
         margin: 0px;
-        text-shadow: $medium-silver 1px 1px, $medium-silver 2px 2px;
         width: 60px;
       }
     }
