--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -9,8 +9,6 @@
 
 .footer{
   background-color: white;
-  border-top-left-radius: 100% 50%;
-  border-top-right-radius: 100% 50%;
   bottom: 0px;
   padding: 10px 0px;
   position: relative;
@@ -22,7 +20,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 5px 20px;
+    margin: 0px;
     margin-top: 10px;
     width: 100%;
 
@@ -35,10 +33,10 @@
     }
 
     p{
-      margin: 5px 10%;
+      margin: 5px 0px;
       font-size: 0.8em;
       font-weight: 300;
-      padding: 5px;
+      padding: 5px 20px;
     }
   }
 }
