--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,13 +1,10 @@
 .header{
-  height: 100%;
-  position: relative;
-  width: 100%;
+  overflow: hidden;
   z-index: 10;
 }
 
 @media (max-width: 1500px) {
   .header{
-    overflow: auto;
-    position: fixed;
+    padding: 200px 0px;
   }
 }
