--- a/src/components/lastYearsWinner/last-years-winner.scss
+++ b/src/components/lastYearsWinner/last-years-winner.scss
@@ -12,7 +12,7 @@
 @media (max-width: 1500px) {
   .last-years-winner-wrapper{
     height: 320px;
-    margin: 320px 0px;
+    margin: 0px;
     position: relative;
   }
 }
@@ -34,12 +34,11 @@
     color: $light-blue;
     display: flex;
     font-size: 24px;
-    font-weight: 700;
+    font-weight: 100;
     height: 20px;
     justify-content: center;
     margin: 0px;
     padding: 20px 0px;
-    text-shadow: $light-blue 1px 1px, $dark-blue 2px 2px;
     width: 100%;
   }
 
