--- a/src/components/leaders/leaders.scss
+++ b/src/components/leaders/leaders.scss
@@ -1,4 +1,3 @@
-
 .leaders-wrapper{
   align-items: center;
   display: flex;
@@ -13,7 +12,7 @@
   .leaders-wrapper{
     justify-content: center;
     position: relative;
-    top: 200px;
+    top: auto;
 
     .leaders{
       left: initial;
@@ -23,27 +22,16 @@
   }
 }
 
-@media (max-width: 1200px) {
-  .leaders-wrapper{
-    top: 320px;
-  }
-}
-
 .leaders{
   align-items: center;
   display: flex;
   justify-content: center;
-  left: -500px;
+  left: 0px;
   position: absolute;
   transform: rotateX(-35deg) rotateY(35deg) rotateZ(15deg);
   transform-style: preserve-3d;
-  transition: all 1s;
   width: 500px;
   z-index: 3;
-
-  &.intro{
-    left: 0px;
-  }
 
   .names{
     align-items: center;
@@ -56,7 +44,6 @@
     .name{
       display: flex;
       margin-bottom: 40px;
-      text-shadow: $medium-silver 1px 1px, $medium-silver 2px 2px;
       width: 100%;
       z-index: 2;
 
@@ -65,9 +52,10 @@
         box-shadow: -16px -16px 4px rgba(0,0,0,0.15);
         color: white;
         display: flex;
-        font-weight: bolder;
+        font-weight: 100;
         justify-content: center;
         margin: 0px;
+        text-shadow: 0px 0px 1px rgba(black, 0.4);
       }
 
       &.first{
@@ -168,7 +156,7 @@
     .medal{
       align-items: center;
       box-shadow: 1px 1px 4px rgba(0,0,0,0.4);
-      border-radius: 50%;
+      border-radius: 200px;
       margin: 0px;
       margin-bottom: 40px;
       width: 100%;
@@ -179,6 +167,7 @@
         border-top-right-radius: 80px;
         color: $blue;
         display: flex;
+        font-weight: 300;
         height: 50%;
         justify-content: center;
         margin: 0px;
@@ -192,10 +181,10 @@
         border-bottom-right-radius: 80px;
         color: white;
         display: flex;
+        font-weight: 100;
         height: 50%;
         justify-content: center;
         margin: 0px;
-        text-shadow: $medium-silver 1px 1px, $medium-silver 2px 2px;
         width: 100%;
       }
 
@@ -224,7 +213,7 @@
           color: $light-silver;
           font-size: 24px;
           height: 60px;
-          text-shadow: $light-silver 1px 1px, $dark-silver 2px 2px, $dark-silver 3px 3px, $dark-silver 4px 4px;
+          text-shadow: $light-silver 1px 1px, $dark-silver 2px 2px, $dark-silver 3px 3px;
         }
         .votes{
           background-color: $dark-silver;
@@ -240,7 +229,7 @@
           color: $light-bronze;
           font-size: 18px;
           height: 40px;
-          text-shadow: $light-bronze 1px 1px, $dark-bronze 2px 2px;
+          text-shadow: $light-bronze 1px 1px;
         }
         .votes{
           background-color: $dark-bronze;
