--- a/src/components/titleBar/title-bar.scss
+++ b/src/components/titleBar/title-bar.scss
@@ -1,77 +1,27 @@
-.title{
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  position: relative;
-  transition: all 1s;
+.title-bar{
+  background-color: white;
+  box-shadow: $shadow1;
+  height: 80px;
+  position: fixed;
   width: 100%;
   z-index: 1111;
 
   .text{
-    align-items: center;
-    background-color: white;
-    border-radius: 60px;
-    box-shadow: -2px 2px 0px 2px $light-red,2px -2px 0px 2px $light-green, 0px -8px 4px 8px rgba(0, 0, 0, 0.15);
     color: $light-red;
-    display: flex;
-    font-size: 48px;
-    font-weight: bolder;
+    font-size: 2em;
+    font-weight: 100;
+    height: 80px;
+    line-height: 80px;
     justify-content: center;
     margin: 0px;
-    margin-top: 20px;
+    margin-left: 20px;
     min-height: 58px;
-    padding: 20px 40px;
-    text-shadow: $light-red 1px 1px, $dark-red 2px 2px, $dark-red 3px 3px, $dark-red 4px 4px, $dark-red 5px 5px;
-    transition: all 1s;
-    width: 600px;
+    text-align: left;
+    width: 100%;
 
     .year{
       color: $light-green;
       margin-right: 16px;
-      text-shadow: $light-green 1px 1px, $green 2px 2px, $green 3px 3px, $green 4px 4px, $green 5px 5px;
-    }
-  }
-}
-
-@media (max-width: 1500px) {
-  .title{
-    position: fixed;
-    z-index: 10;
-
-    .text{
-      border-radius: 0px;
-      box-shadow: 0px 1px 4px rgba(0,0,0,0.4);
-      margin-top: 0px;
-      width: 100%;
-    }
-
-    .lights{
-      left: -10%;
-      top: 95px;
-      width: 120%;
-
-      li:nth-child(1n + 12){
-        &:after{
-          display: initial;
-        }
-      }
-    }
-  }
-}
-
-@media (max-width: 650px) {
-  .title{
-    .text{
-      font-size: 36px;
-    }
-  }
-}
-
-@media (max-width: 450px) {
-  .title{
-    .text{
-      font-size: 24px;
     }
   }
 }
