--- a/src/components/lastYearsWinner/last-years-winner.scss
+++ b/src/components/lastYearsWinner/last-years-winner.scss
@@ -18,12 +18,8 @@
 }
 
 .last-years-winner{
-  align-items: center;
   border-radius: 60px;
   box-shadow: 0px -4px 0px 4px $light-silver, 1px 1px 4px rgba(0,0,0,0.4);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   height: 300px;
   position: relative;
   width: 300px;
@@ -32,37 +28,34 @@
     align-items: center;
     background-color: white;
     color: $light-blue;
-    display: flex;
     font-size: 24px;
     font-weight: 100;
     height: 20px;
-    justify-content: center;
     margin: 0px;
     padding: 20px 0px;
     width: 100%;
   }
 
   .image{
-    align-items: center;
     background-color: white;
-    display: flex;
     height: 180px;
-    justify-content: center;
     position: relative;
+    text-align: center;
     width: 100%;
 
     img{
       border: none;
       border-radius: 50%;
+      display: inline-block;
       max-height: 180px;
-      position: absolute;
+      margin: auto;
     }
   }
 
   .title{
     border-top-left-radius: 60px;
     border-top-right-radius: 60px;
-    position: absolute;
+    text-align: center;
     top: 0px;
   }
 
@@ -70,7 +63,6 @@
     bottom: 0px;
     border-bottom-left-radius: 60px;
     border-bottom-right-radius: 60px;
-    position: absolute;
-    bottom: 0px;
+    text-align: center;
   }
 }
