--- a/src/components/leaders/leaders.scss
+++ b/src/components/leaders/leaders.scss
@@ -2,9 +2,10 @@
   align-items: center;
   display: flex;
   height: 500px;
+  left: 0px;
   position: absolute;
   top: 240px;
-  width: 100%;
+  width: 500px;
   z-index: 9;
 }
 
@@ -13,6 +14,7 @@
     justify-content: center;
     position: relative;
     top: auto;
+    width: 100%;
 
     .leaders{
       left: initial;
@@ -26,8 +28,6 @@
   align-items: center;
   display: flex;
   justify-content: center;
-  left: 0px;
-  position: absolute;
   transform: rotateX(-35deg) rotateY(35deg) rotateZ(15deg);
   transform-style: preserve-3d;
   width: 500px;
@@ -70,7 +70,7 @@
             $medium-gold 100px
           );
           border-radius: 80px;
-          box-shadow: 0px 0px 0px 10px $dark-gold, -12px -8px 0px 12px $medium-gold, -56px -46px 4px 12px rgba(0,0,0,0.15);
+          box-shadow: 0px 0px 0px 10px $dark-gold, -12px -8px 0px 12px $medium-gold, -56px -46px 14px 12px rgba(0,0,0,0.1);
           font-size: 32px;
           height: 160px;
           margin-left: -160px;
@@ -80,7 +80,7 @@
         }
         @media (max-width: 1500px) {
           h1{
-            box-shadow: 0px 0px 0px 10px $dark-gold, 0px -8px 0px 12px $medium-gold, 0px -46px 4px 12px rgba(0,0,0,0.15);
+            box-shadow: 0px 0px 0px 10px $dark-gold, 0px -8px 0px 12px $medium-gold, 0px -46px 14px 12px rgba(0,0,0,0.05);
           }
         }
       }
@@ -96,7 +96,7 @@
             $medium-silver 80px
           );
           border-radius: 60px;
-          box-shadow: 0px 0px 0px 10px $dark-silver, -10px -8px 0px 10px $medium-silver, -46px -36px 4px 10px rgba(0,0,0,0.15);
+          box-shadow: 0px 0px 0px 10px $dark-silver, -10px -8px 0px 10px $medium-silver, -46px -36px 14px 10px rgba(0,0,0,0.1);
           font-size: 24px;
           height: 120px;
           margin-left: -120px;
@@ -106,7 +106,7 @@
         }
         @media (max-width: 1500px) {
           h1{
-            box-shadow: 0px 0px 0px 10px $dark-silver, 0px -8px 0px 10px $medium-silver, 0px -36px 4px 10px rgba(0,0,0,0.15);
+            box-shadow: 0px 0px 0px 10px $dark-silver, 0px -8px 0px 10px $medium-silver, 0px -36px 14px 10px rgba(0,0,0,0.05);
           }
         }
       }
@@ -122,7 +122,7 @@
             $medium-bronze 60px
           );
           border-radius: 40px;
-          box-shadow: 0px 0px 0px 10px $dark-bronze, -10px -8px 0px 10px $medium-bronze, -46px -36px 4px 10px rgba(0,0,0,0.15);
+          box-shadow: 0px 0px 0px 10px $dark-bronze, -10px -8px 0px 10px $medium-bronze, -46px -36px 14px 10px rgba(0,0,0,0.1);
           font-size: 18px;
           height: 80px;
           margin-left: -80px;
@@ -132,7 +132,7 @@
         }
         @media (max-width: 1500px) {
           h1{
-            box-shadow: 0px 0px 0px 10px $dark-bronze, 0px -8px 0px 10px $medium-bronze, 0px -36px 4px 10px rgba(0,0,0,0.15);
+            box-shadow: 0px 0px 0px 10px $dark-bronze, 0px -8px 0px 10px $medium-bronze, 0px -36px 14px 10px rgba(0,0,0,0.05);
           }
         }
       }
@@ -155,7 +155,7 @@
 
     .medal{
       align-items: center;
-      box-shadow: 1px 1px 4px rgba(0,0,0,0.4);
+      box-shadow: $shadow1;
       border-radius: 200px;
       margin: 0px;
       margin-bottom: 40px;
