--- a/src/components/titleBar/title-bar.scss
+++ b/src/components/titleBar/title-bar.scss
@@ -1,27 +1,56 @@
 .title-bar{
-  background-color: white;
-  box-shadow: $shadow1;
-  height: 80px;
+  height: 100px;
   position: fixed;
   width: 100%;
   z-index: 1111;
 
-  .text{
-    color: $light-red;
-    font-size: 2em;
-    font-weight: 100;
-    height: 80px;
-    line-height: 80px;
+  .santa-hat-icon{
+    background-image: url("/assets/img/santa-hat.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 50px;
+    display: inline-block;
+    height: 50px;
+    margin: 15px 20px;
+    margin-top: 50px;
+    position: relative;
+    vertical-align: top;
+    width: 50px;
+    z-index: 3;
+  }
+
+  .title{
+    display: inline-block;
+    font-size: 1em;
+    height: 50px;
     justify-content: center;
-    margin: 0px;
-    margin-left: 20px;
-    min-height: 58px;
+    margin: 15px;
+    margin-top: 50px;
+    margin-left: 0px;
     text-align: left;
-    width: 100%;
+    vertical-align: top;
+
+    .year, .text{
+      display: inline-block;
+      width: 100%;
+    }
 
     .year{
-      color: $light-green;
+      color: $gray200;
+      font-size: 1em;
+      font-weight: 300;
+      height: 20px;
+      line-height: 20px;
+    }
+
+    .text{
+      color: white;
+      font-size: 1.5em;
+      font-weight: 100;
+      height: 30px;
+      line-height: 30px;
       margin-right: 16px;
+      white-space: nowrap;
     }
   }
 }
