--- a/src/index.pug
+++ b/src/index.pug
@@ -3,6 +3,7 @@ html(lang="en")
   head
     meta(charset='UTF-8')
     link(href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,700' rel='stylesheet')
+    link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet')
     title Christmas Hat Challenge
   body
     #app
