--- a/src/components/totalVotes/total-votes.scss
+++ b/src/components/totalVotes/total-votes.scss
@@ -1,54 +1,48 @@
 .totals{
   align-items: center;
-  display: flex;
+  display: inline-block;
   height: 80px;
   justify-content: center;
-  margin-top: 40px;
+  margin-top: 60px;
+  position: absolute;
   right: 0px;
   top: 0px;
-  width: 100%;
   z-index: 30;
 
   .money, .votes{
-    align-items: center;
     box-shadow: $shadow1;
-    display: flex;
-    border-radius: 25px;
+    border-radius: 100px;
 
     .icon{
-      align-items: center;
       background-color: white;
-      display: flex;
+      border-bottom-left-radius: 100px;
+      border-top-left-radius: 100px;
+      display: inline-block;
       font-size: 1.5em;
       height: 30px;
       margin: 0px;
-      justify-content: center;
-      padding: 15px 10px;
+      padding: 15px 5px 15px 10px;
+      text-align: center;
       width: 30px;
     }
 
     .value{
-      align-items: center;
       color: white;
-      display: flex;
+      display: inline-block;
       font-size: 1.5em;
       font-weight: 100;
       height: 30px;
-      justify-content: center;
       margin: 0px;
       padding: 15px 10px;
+      text-align: center;
       text-shadow: 0px 0px 1px rgba(black, 0.4);
       width: 80px;
     }
   }
 
   .votes{
-    left: 0px;
-    position: absolute;
+    margin-bottom: 20px;
     .icon{
-      border-bottom-right-radius: 100px;
-      border-top-right-radius: 100px;
-      
       i{
         color: $blue;
       }
@@ -68,9 +62,6 @@
     right: 0px;
     position: absolute;
     .icon{
-      border-bottom-left-radius: 100px;
-      border-top-left-radius: 100px;
-      
       i{
         color: $green;
       }
