--- a/src/client/components/footer/footer.scss
+++ b/src/client/components/footer/footer.scss
@@ -1,17 +1,23 @@
 .footer-wrapper{
   bottom: 0px;
-  display: flex;
   left: 0px;
+  display: flex;
   position: fixed;
   width: 100%;
   z-index: 10;
+}
+
+@media(max-width: 1500px){
+  .footer-wrapper{
+    position: absolute;
+  }
 }
 
 .footer{
   background-color: white;
   bottom: 0px;
   padding: 10px 0px;
-  position: relative;
+  position: absolute;
   text-align: center;
   width: 100%;
   z-index: 2;
