--- a/src/client/components/titleBar/title-bar.scss
+++ b/src/client/components/titleBar/title-bar.scss
@@ -5,7 +5,7 @@
   z-index: 1111;
 
   .santa-hat-icon{
-    background-image: url("/assets/img/santa-hat.png");
+    background-image: url("/img/santa-hat.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: 50px;
